--- a/MySQL/数据库_2_系统原理.md
+++ b/MySQL/数据库_2_系统原理.md
@@ -290,12 +290,12 @@
 
   ```mysql
   # 版本号/时间戳 是结合数据库完成的！
-  
+
   # 第一步：获取版本号
   select version, other_cols from table_1 where id = 1;
-  
+
   # 第二步：使用上述的 other_cols 信息完成业务需求，生成 new_other_cols_value，同时将取出的 verison 视为 old_version
-  
+
   # 第三步：将 other_cols 写回数据库
   update table_1 set version=version+1,other_cols=new_other_cols_value where id=1 and  version=old_version;
   ```
@@ -319,7 +319,7 @@
 + 锁粒度上：**InnoDB 同时支持 表级锁和行级锁**！
 
   为允许 两种锁粒度 共存，实现高效的**多锁粒度机制**，InnoDB **引入了 表级的 意向锁**：*意向共享锁、意向排他锁* ！
-  
+
 + 锁类型上：**读写锁**
 
 ###### 意向锁
@@ -352,7 +352,6 @@
 
   **意向锁 在加 行级锁之前， InnoDB 自动加上的**，不需要用户干预！
 
-  
 
 ##### 封锁协议
 
@@ -442,7 +441,7 @@
   ```mysql
   # -----------------------------------------------#
   # 表锁
-  
+
   # 表锁 加读锁 [ local 并发插入 ]
   local table(s) table_1 read [local];
   # 表锁 加写锁
@@ -451,15 +450,15 @@
   unlock table(s);
   # -----------------------------------------------#
   # 行锁
-  
+
   # 首先设定禁止自动提交
   set autocommit=0;
-  
+
   # 行锁：共享锁（S）：lock in share mode
   SELECT ... LOCK IN SHARE MODE;
   # 行锁：排他锁（X）：for update
   SELECT ... FOR UPDATE;
-  
+
   # 手动提交
   commit;
   # -----------------------------------------------#
@@ -468,19 +467,19 @@
 #### MVCC
 
 + 数据库 的 锁机制能够 解决多事务执行时的并发一致性问题。在实际场景中，往往是 读多写少，并且读写锁互斥，此时，使用锁 不但会耗费系统资源，还会阻塞事务的执行，降低 MySQL 的性能！
-+ 于是，MySQL 采用无锁的并发控制机制 MVCC 解决 Read Committed 和 Repeatable Read 这两个隔离级别的**并发读一致性问题**！（MySQL 默认工作在 Repeatable Read 级别）
++ 于是，MySQL 采用无锁的并**发控制机制 MVCC** 解决 Read Committed 和 Repeatable Read 这两个隔离级别的**并发读一致性问题**！（MySQL 默认工作在 Repeatable Read 级别）
 
 ##### 介绍
 
 + MVCC（Multi Version Concurrency Control）多版本并发控制
 
-  它为某每个行 维护了一个 行记录版本链，当某事务查询数据时，便从版本链中为其找出最合适的行记录版本！
+  它为某每个行 维护了一个 **行记录版本链**，当某事务**查询数据时，便从版本链中为其找出最合适的行记录版本**！
 
-  当某事修改行记录时，InnoDB 便将数据库中当前的 行记录 保存到该行的版链中，并在数据库中更新该行记录！
+  当某事**修改行记录**时，InnoDB 便**将数据库中当前的 行记录 保存到该行的版链中，并在数据库中更新该行记录**！
 
 + MVCC 的实现机制
 
-  MVCC 维护了 *事务ID*、*行记录的版本号*、*保存行记录版本链的 undo log 回滚日志* 以及 *维护当前活跃事务的 read view* ！
+  MVCC 维护了 *事务ID*、*行记录的版本号*、*回滚指针*、*保存行记录版本链的 undo log 回滚日志* 以及 *维护当前活跃事务的 read view* ！
 
 + InnoDB 的逻辑存储结构
 
@@ -588,19 +587,19 @@
   <!--
    · 注意：
   	1. 如果查询条件中没有使用到索引，那么，将使用表锁！（生产环境要注意！！）
-  
+
   	2. 如果表中没有索引，InnoDB 会自动创建隐藏的聚族索引 来对记录加锁！
-  
+
   	3. MySQL 行锁是针对索引加锁的，不是针对记录加锁，因此即使访问不同的行记录，如果使用了相同的索引键，依旧是会出现锁冲突！
   	？？？？我测试的结果是：即便是使用了相同索引 查询不同行，也不会冲突!？？？？
-  
+
   	4. 当表有多个索引时，不同的事务可以使用不同的索引锁定不同的行，不论是使用主键索引、唯一索引 还是 普通索引，InnoDB 都会使用行锁对数据加锁！
   -->
   ```
 
 + InnoDB 的行锁有三种实现：
 
-  *Record Lock、Gap Lock、Next-Key Lock*
+  *Record Lock、Gap Lock、Next-Key Locks*
 
 ##### Record Lock
 
@@ -640,21 +639,21 @@
 
   ```mysql
   set autocommit=0;
-  
+
   # 以下 sql 检索同样的内容，uid=4 到 uid=11 的记录都会被返回！
   select * from table_1 where uid >= 4 and uid < 12 for update;
   select * from table_1 where uid > 3 and uid <= 11 for update;
   select * from table_1 where uid between 4 and 11 for update;
-  
+
   # 在另个一 client 端执行以下内容时将会被阻塞
   delete from table_1 where uid=12;
   delete from table_1 where uid=11;
   delete from table_1 where uid=4 ;
-  
+
   # 但是执行 uid=3 时不阻塞！
   delete from table_1 where uid=3；
   delete from table_1 where uid=13；
-  
+
   # 结果：除了锁定满足的条件，还会锁定的范围，还会延续到 查询结果的后一个记录！
   # 例如：当表中存在 uid=[3,15] 并且 uid=[20,25]
   select * from table_1 where uid between 4 and 15 for update;
@@ -768,7 +767,7 @@
    # 1、事务 T1 首先获取了 某个 资源A 的 X 锁，并未提交！
    # 2、事务 T2 随后，尝试获取包括 资源A 在内的资源的锁 —— 事务 T2 等待！
    # 3、此时，T1 尝试在 上述 T2 申请的资源范围内 insert 一个新资源！
-   
+
    # 如果 执行到 步骤3 时 T1 能成功 插入资源，那么，后续当 T2 获取到 T1释放的资源的A 锁之后，还需要向后获得 T1 insert 的新资源 —— 不合理，主动认为是死锁！
    ```
 
@@ -801,12 +800,12 @@
 
   如下例：（学生-课程-学院）
 
-  | Sno  | Sname  | Sdept  | Mname  | Cname  | Grade |
-  | ---- | ------ | ------ | ------ | ------ | ----- |
-  | 1    | 学生-1 | 学院-1 | 院长-1 | 课程-1 | 90    |
-  | 2    | 学生-2 | 学院-2 | 院长-2 | 课程-2 | 80    |
-  | 2    | 学生-2 | 学院-2 | 院长-2 | 课程-1 | 100   |
-  | 3    | 学生-3 | 学院-2 | 院长-2 | 课程-2 | 95    |
+  | Sno  | Sname | Sdept | Mname | Cname | Grade |
+  | ---- | ----- | ----- | ----- | ----- | ----- |
+  | 1    | 学生-1  | 学院-1  | 院长-1  | 课程-1  | 90    |
+  | 2    | 学生-2  | 学院-2  | 院长-2  | 课程-2  | 80    |
+  | 2    | 学生-2  | 学院-2  | 院长-2  | 课程-1  | 100   |
+  | 3    | 学生-3  | 学院-2  | 院长-2  | 课程-2  | 95    |
 
 + 范式理论是为了解决上述 4 种异常！
 
