--- a/并发/并发_2_J.U.C 并发容器 .md
+++ b/并发/并发_2_J.U.C 并发容器 .md
@@ -457,7 +457,7 @@ break
 
   ```
   1. 分段锁 segment 继承于 ReentrantLock 增加了 内存开销，而 JDK 1.8 使用了 cas+Synchronized 锁，优化了内存空间的占用！
-  2. 一个 segment 合并了多个 哈希桶，但是，对这些 哈希通而言，产生线程冲突的并不多，这样对于访问同一个 segment 中的不同桶元素而言，需要串行化执行，有损性能！而对于 JDK1.8 而言，采用对 桶首结点进行加锁的方式，实现同一个桶下的线程安全性，锁粒度更低，提高了性能！
+  2. 一个 segment 合并了多个 哈希桶，但是，对这些 哈希桶而言，产生线程冲突的并不多，这样对于访问同一个 segment 中的不同桶元素而言，需要串行化执行，有损性能！而对于 JDK1.8 而言，采用对 桶首结点进行加锁的方式，实现同一个桶下的线程安全性，锁粒度更低，提高了性能！
   ```
 
 ##### CopyOnWriteArrayList ---- 线程安全的 ArrayList
@@ -1020,4 +1020,3 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
 ```
 
 + [SynchronousQueue(同步队列)](https://www.iteye.com/blog/shift-alt-ctrl-1840385)
-
