--- a/并发/并发_3_J.U.C AQS .md
+++ b/并发/并发_3_J.U.C AQS .md
@@ -19,10 +19,10 @@
 ```java
 /*
  · 核心思想：
- 	AQS 核心思想是，如果当前线程请求的共享资源空闲，则将其设置为有效的工作线程，并将共享资源设置为锁定状态。如果请求的共享资源被占用，那就需要一套 线程阻塞 以及 线程被唤醒时 的锁分配机制！	
+ 	AQS 核心思想是，如果当前线程请求的共享资源空闲，则将其设置为有效的工作线程，并将该共享资源设置为锁定状态。如果请求的共享资源被占用，那就需要一套 线程阻塞 以及 线程被唤醒时 的锁分配机制！	
  
  · 资源锁定（源码如下）
-	AQS 内部维护了一个 用 volatile修饰的整型变量（state），用该变量表示资源锁定的状态！正是由于 volatile 修饰，保证了该变量的可见性，任何读写都是内存层面的读写（而非工作内存中的读写），此外，AQS 还是使用 CAS 保证 state 的原子性修改，因此并发情况下，state 是线程安全的！
+	AQS 内部维护了一个 用 volatile修饰的整型变量（state），用该变量表示资源锁定的状态！正是由于 volatile 修饰，保证了该变量的可见性，任何读写都是主内存层面的读写（而非工作内存中的读写），此外，AQS 还使用 CAS 保证 state 的原子性修改，因此并发情况下，state 是线程安全的！
  
  · 锁分配
 	AQS 通过 CLH 双端队列实现线程的锁分配机制！AQS 将每条请求共享资源的线程封装成一个 CLH 锁队列的结点，并将暂时获取不到锁的线程加入到队列中，通过队列的入队出队的策略 实现线程的 锁分配机制！
@@ -247,8 +247,8 @@ public class ReentrantLock implements Lock, java.io.Serializable {
  
  · 方法
  	1、acquire 获取许可，默认是一个许可，也可以一次获取多个许可，如果获取不到，则阻塞（可设置阻塞时长）
-   2、release 释放许可，默认是一个许可，也可以一次释放多个许可
-   	  semaphore.acquire(5); --- 一个线程一次性获取 5 个许可证（一般没有必要做多个许可的获取和释放）
+    2、release 释放许可，默认是一个许可，也可以一次释放多个许可
+   	    semaphore.acquire(5); --- 一个线程一次性获取 5 个许可证（一般没有必要做多个许可的获取和释放）
 		Thread.sleep(20);
 		semaphore.release(5); --- 一个线程一次性释放 5 个许可证
 	
@@ -332,10 +332,10 @@ public class SemaphoreExample1 {
  		可以设置时限，当到达时限后线程将继续往下执行，而不必阻塞等待计数器值为 0！
  · 用途
 	1、某一线程在开始运行前，需要等待前 n 个线程执行完某一操作！
-		创建一个共享的 CountDownLatch 对象，初始化计数器为 n（AQS的状态 state）：new CountDownLatch(n)。线程执行完指定操作之后，调用 countDownLatch.countDown()，使得线程计数器-1，并在需要阻塞线程的地方调用 countDownLatch.await，则所有执行到该地的线程都会被阻塞（加入到 AQS 队列中），除非阻塞线程被 interrupt！当线程计数器 n = 0 时，所有被 await方法 阻塞的线程都会被全部唤醒，继续执行！
+	   创建一个共享的 CountDownLatch 对象，初始化计数器为 n（AQS的状态 state）：new CountDownLatch(n)。线程执行完指定操作之后，调用 countDownLatch.countDown()，使得线程计数器-1，并在需要阻塞线程的地方调用 countDownLatch.await，则所有执行到该地的线程都会被阻塞（加入到 AQS 队列中），除非阻塞线程被 interrupt！当线程计数器 n = 0 时，所有被 await方法 阻塞的线程都会被全部唤醒，继续执行！
 	
 	2、实现多个线程开始执行任务的最大并行性（并行：强调的是多个线程在某一个时刻同时开始执行，不是并发！）
-		创建一个共享的 CountDownLatch 对象，初始化计数器为 1：new CountDownLatch(1)，多个线程在开始执行时立刻调用 countDownLatch.await()，然后由主线程 调用 countDownLatch.countDown() 方法，此时计数器减为 0，被阻塞的所有线程被同时唤醒！ 
+	   创建一个共享的 CountDownLatch 对象，初始化计数器为 1：new CountDownLatch(1)，多个线程在开始执行时立刻调用 countDownLatch.await()，然后由主线程 调用 countDownLatch.countDown() 方法，此时计数器减为 0，被阻塞的所有线程被同时唤醒！ 
 	
  · 应用场景：并行计算
  	当某个处理的运算量很大时，可以将该运算任务拆分成多个运算子任务。等待所有子任务都完成之后，副任务再拿到所有子任务的运算结果进行汇总！
@@ -563,4 +563,3 @@ SyclicBarrier 使用场景：
  ReentrantReadWriteLock 可以保证多个线程同时读、所以再读操作远远多余写操作时，读写锁就能表现得很好！
 */
 ```
-
