--- a/并发/线程_3_并发.md
+++ b/并发/线程_3_并发.md
@@ -6,26 +6,23 @@
 
 + *悲观锁 —— 互斥同步（阻塞同步）*
 
-  ```
-   · 总是假设最坏的情况，任何时刻都会有并发冲突，所以每次访问数据时，都会加锁！其他线程想问访问数据时，就会被阻塞直到锁被释放！
-  ```
+  总是假设最坏的情况，任何时刻都会有并发冲突，所以每次访问数据时，都会加锁！其他线程想问访问数据时，就会被阻塞直到锁被释放！
 
-  **实现方式：**
+   **实现方式：**
 
-  + 数据库外部悲观锁：**synchronized、ReentrantLock**
+  - 数据库外部悲观锁：**synchronized、ReentrantLock**
 
-  + 数据库内部悲观锁：**排他锁（写锁）**
+  - 数据库内部悲观锁：**排他锁（写锁）**
 
-    ```
-     · MySQL 中的 update、insert、delete 自动加上写锁
-     · 可以对 询语句显示加锁：select ... for update
-    ```
+        MySQL 中的 update、insert、delete 自动加上写锁
+        可以对 询语句显示加锁：select ... for update
+
 
 + *乐观锁 —— 非阻塞同步（无锁编程 Lock-Free）*
 
   ```
    · 总是假设最好的情况，访问数据不会上锁，只会检测是否存在并发冲突，如果没有其他线程对共享数据进行写操作，则操作数据；如果共享数据被争用，那就执行补偿措施：失败重试，直到无冲突为止！
-   
+
    · 乐观锁适用于读多写少的场景，用于提高吞吐量！
   ```
 
@@ -33,17 +30,12 @@
 
   + 检测冲突：**CAS、版本号机制（时间戳）**
 
-    ```
     在 java.util.concurrent.atomic 包下面的原子变量类就是使用了乐观锁的一种实现方式：CAS
-    ```
 
-  + 补偿措施：**自旋（失败重试）**
+    + 补偿措施：**自旋（失败重试）**
 
-  + 数据库中的乐观锁 ？
-
-    ```
-    数据库中提供的类似于 write_condition 机制，其实就是乐观锁的思想！
-    ```
+    + 数据库中的乐观锁 ？
+      数据库中提供的类似于 write_condition 机制，其实就是乐观锁的思想！
 
 + *乐观锁 vs 悲观锁*
 
@@ -52,7 +44,7 @@
   ```
    · 悲观锁适用于 多写 的场景。
    	即：一般会经常产生冲突，此时如果使用乐观锁，则会导致上层应用不断的 retry，占用 CPU 资源，反而会降低系统 性能！
-  
+
    · 乐观锁适用于 读多写少 的场景。
    	即：冲突很少发生，此时如果频繁地阻塞锁，并且多数情况下没有意义，这会导致大量的锁开销！若不加锁，则能加大系统的吞吐量！
   ```
@@ -72,21 +64,20 @@
     	2、A 转出余额 50，并更新到数据库中，此时，versionA = versionDB = 0，数据可被修改，所以 version++，并且 rest=50;
     	3、B 转出余额 10，并更新到数据库中，此时，versionB = 0 而 versionDB = 1，数据不可被修改，驳回 B 的请求！（需要重新获取数据库中的数据的新状态，重新进行 B 的数据操作，再次更新）
    */
-   
-   
+
    /*
     · 时间戳 是 间接性的版本号，机制都一样，只不过将 版本号+1 变成了 修改时的时间戳！
-    	可以使用数据库中修改后自动生成的时间戳
+   	可以使用数据库中修改后自动生成的时间戳
    */
    ```
 
-   ```mysql
-   # 第一步：获取版本号
-   select version, other_cols from table_1 where id = 1;
-   # 第二步：使用上述的 other_cols 信息完成业务需求，生成 new_other_cols_value，同时将取出的 verison 视为 old_version
-   # 第三步：将 other_cols 写回数据库
-   update table_1 set version=version+1,other_cols=new_other_cols_value where id=1 and  version=old_version;
-   ```
+      ```mysql
+      # 第一步：获取版本号
+      select version, other_cols from table_1 where id = 1;
+      # 第二步：使用上述的 other_cols 信息完成业务需求，生成 new_other_cols_value，同时将取出的 verison 视为 old_version
+      # 第三步：将 other_cols 写回数据库
+      update table_1 set version=version+1,other_cols=new_other_cols_value where id=1 and  version=old_version;
+      ```
 
 2. CAS 算法
 
@@ -220,7 +211,7 @@ print
     	synchronized 加的是 对象锁！并发场景下，只能有一个线程能获取到该对象的对象锁，其他线程阻塞，只有当前对象释放对象锁了，其他线程才能获取锁！
    	当一个类中两个实例方法都加了同步锁，则同一个对象的情况下，多个线程不能同时访问这两个同步方法，因为同一个时刻只能有一个线程可以获取到对象锁！
    */
-   
+
    /*
    1、修饰 【 代码块 】 
    	被修饰的代码：同步代码块
@@ -237,7 +228,7 @@ print
            System.out.print("lock all objects of Example type");
        }
    }
-   
+
    /*
    2、修饰 【 实例方法 】 
    	被修饰的方法：同步方法
@@ -247,7 +238,7 @@ print
    public synchronized void test2(){
        System.out.println("lock the object who invokes this method");
    }
-   
+
    /*
    3、修饰 【 静态方法 】
    	锁对象：该类的所有实例对象！所有该类的实例对象调用该方法时，都会相互互斥！
@@ -256,7 +247,7 @@ print
    public static synchronized void test3(int j) {
        System.out.println(" lock all objects of current type");
    }
-   
+
    /*
     · 注意：
     	synchronized 不具备继承性，如果父类的方法使用synchronized修饰，则子类需要手动为其声明synchronized进行修饰！
@@ -264,7 +255,7 @@ print
     
     · 总结：
     	1、synchronized(class) 与 synchronized修饰静态方法 一致，都是给 Class 类上锁！
-    	2、尽量不要使用 synchronized(String a)，因为 jvm中，字符串常量池有缓存功能！
+    	2、尽量不要使用 synchronized(String a)，因为 jvm中，字符串常量池有缓存功能！---- dubbo 中的 getShareClient 因为这个原因优化过
    */
    ```
 
@@ -272,7 +263,7 @@ print
 
    ```java
    private volatile static Object object;
-   
+
    Object getSingletonObject() {
        if (object == null) {
            // 注意：不能在 synchronized 中 调用 return！！！否则不会自动解锁！
@@ -284,7 +275,7 @@ print
        }
        return object;
    }
-   
+
    /*
     · 注意：object 采用 volatile 关键字修饰是很有必要的！
     	object = new Object(); 这段代码在 JVM 层面并不是原子操作，其实是分为三步的：
@@ -306,16 +297,16 @@ print
 1. `锁消除、锁粗化`
    + 发生在执行同步块之前，JVM 探测是否有必要加锁，是否有必要扩展锁！
 
-1. `偏向锁`
+2. `偏向锁`
    + 解决问题：在只有一个线程进入临界区时，消除所有同步操作 —— 个人觉得，消除的是轻量级锁的 同步操作（自然也消除重量级锁的同步操作）！
-2. `轻量级锁`
+3. `轻量级锁`
    + 解决问题：在多个线程交替进入临界区时，避免进入重量级锁！
    + **疑问？**既然有了`自旋锁/自适应性自旋锁`这种锁竞争机制，为什么还要 轻量级锁！
    + [知乎问答：自旋锁和轻量级锁的关系](https://www.zhihu.com/question/270564693/answer/357794263)
-3. `自旋锁、自适应性自旋锁`（锁竞争策略）
+4. `自旋锁、自适应性自旋锁`（锁竞争策略）
    + 解决问题：锁膨胀后，多个线程同时进入临界区，且同步块执行时间相对较短时，消除重量级锁频繁的阻塞和唤醒线程！
    + [知乎回答：轻量级锁膨胀过程是什么是否发生](https://www.zhihu.com/question/39009953)
-4. `重量级锁`
+5. `重量级锁`
    + 解决问题：多个线程同时进入临界区时，共享变量的线程安全性！
 
 #####  Synchronized -- 优化 -- 加锁前
@@ -355,7 +346,7 @@ print
   }
   /*
    · StringBuffer 中的 append() 内部是一个同步块，同步对象就是 this!（上例中的 sb 对象）
-  
+
    · 锁消除过程：
    	JVM 会观察变量 sb，经过逃逸分析技术后发现它的动态作用域被限制在 concatString 内部，永远不可能逃逸到 concatString 方法之外，因而其他线程也就无法访问到！于是这里的同步锁，就能安全的消除！
    	在解释执行时，这里仍然会加锁，但是经过服务端编译器的 即时编译 之后，这段代码就会忽略所有的同步措施而直接执行！
@@ -483,9 +474,9 @@ print
   + *发生时间：锁膨胀到重量级锁时！*
 
 + 铺叙
-  
+
 + 互斥同步队性能最大的影响就是阻塞的实现，挂起线程和恢复线程都需要操作系统转入内核态完成，这给`JVM`带来了很大的开销！
-  
+
 + 自旋锁
 
   + 有些应用中，共享数据的锁定状态只会持续很短的一段时间，为了这段时间挂起和恢复线程都是不值得的！于是令后请求的锁 “等待一会儿”，但不放弃占用处理器的执行时间，观察持有锁的线程是否很快释放锁！为了实现这个目的，只需让线程执行一个`忙循环（自旋）`—— 自旋锁！
@@ -519,7 +510,7 @@ print
   	ReentrantLock 是基于 AQS 中的 锁状态实现的 资源互斥，同时 记录当前独占锁的拥有者！
   	锁状态：volatile 修饰的 整型变量，使用 AQS 的方式修改锁状态！
   	加锁解锁的方式 本身就比 Synchronized 轻量级！
-  
+
   2. ReentrantLock 虽然也可以阻塞线程，但是并不是立刻阻塞！
   	首先会尝试通过 CAS 获取锁，失败之后，在真正阻塞线程之前，至少会做一次自旋，也就是说，阻塞之前会 多次尝试获取锁的操作！
   	这就使得，如果 锁冲突不大，并且持有锁的线程能马上执行完成时，线程不会盲目的 被阻塞！
@@ -715,7 +706,7 @@ static class UnmodifiableList<E> extends UnmodifiableCollection<E> implements Li
   ```java
   /*
    · 可重入代码 又称为 纯代码 ，可以在代码执行的任何时刻中断它，转而区去执行另外一段代码（包括递归调用它本身），而在控制权返回后，原来的程序不会出现任何错误，也不会对结果有影响！
-  
+
   · 可重入代码的共同特征：
   	不依赖于全局变量、存储在堆上的数据和公有系统资源，用到的状态量都是由参数传入，不调用 不可重入方法！意味着除了使用线程自己栈上的变量外，不依赖于其他任何环境，包括static！
   */
