--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -106,7 +106,7 @@
 
   ```
    · 在用户态产生的任何系统调用，都需要转向内核态来完成，由用户线程 切换为 内核线程！
-   	这两种状态的转换开销，主要来自于 响应中断、保护 和 恢复执行现场的成本！
+   	这两种状态的转换开销，主要来自于 响应中断、保护 和 恢复执行现场的程本！
    	
    · 内核函数的调用：socket网络上的读写，对于 1:1 线程模型而言，启动、唤醒、阻塞、杀死线程 等线程操作都需要产生系统调用！
   ```
@@ -125,7 +125,7 @@
      ```
      （1）保存硬件现场：CS、IP等寄存器的值（CS：代码段寄存器，IP：指令指针寄存器）
      （2）保存用户线程状态：堆栈和寄存器中的值（方法调用过程中的 各种变量 和 资源）
-     
+
       上述这些信息都将保存到 栈 中！
      ```
 
@@ -236,35 +236,16 @@
 
   1. **先来先服务**算法（FCFS：First Come First Serve）
 
-     ```
-     最公平最简单的调度算法，但是系统吞吐量会降低，不能很好的照顾到短作业。
-     ```
-
   2. **短作业优先**算法（SJF：Short Job First）
 
-     ```
-     有利于短作业，不利于长作业，能够提高系统吞吐量，但是容易造成进程饥饿（长作业进程迟迟得不到处理）。
-     ```
-
   3. **最短剩余时间优先**算法（SRTF：Shortest Remain Time First）：抢占式
-
-     ```
-     最大化的有利于短作业，是一种抢占式调度算法，最大化的提高系统吞吐量，但是也最容易造成长作业进程饥饿。
-     ```
 
   4. **最高响应比**算法（HRN：Highest Response Ratio Nex）
 
      ```
      响应比 = 作业周转时间 / 作业处理时间
-     作业周转时间：作业被加载到内存 到 作业执行完成 之间的时长！
-     ```
 
-     ```
-     相同等待时长的作业：处理时间越短越有利：有利于短作业
-     相同作业处理时长的作业：等待时间越长越有利 ：有利于长作业（等待时间越长，优先级越高）
-     
-     最高响应比算法兼顾了 长作业和短作业，即能够保证短作业能够及时执行，也能够保证长作业不会饥饿。
-     缺点：操作系统需要花费额外的时间计算 相应比，造成额外的系统开销。
+     作业周转时间：作业被加载到内存 到 作业执行完成 之间的时长！
      ```
 
   5. **最高优先级**算法（HPF：Hightest Priority First）
@@ -310,7 +291,7 @@
 
      ```
       · 为每个进程分配一个优先级，优先级高的进程优先占用 处理机 资源！
-     	为避免低优先级的线程永久等待，调度器会根据 进程等待的时长 动态改变优先级！
+     	为避免低优先级的线程永久等待，调度器会 进程等待的时长 动态改变优先级！
      	进程等待的时间越长，优先级会越高！
      	
       · 通过优先级的动态判断，能够有效的控制 进程占用 CPU 的时长，达到分时的效果！
@@ -447,7 +428,7 @@ current thread 14
    ```java
    /*
     · idea命令行 》jConsole
-   
+
     · jConsole 工具
     	jConsole 是 JDK 自带的监控工具，用于连接正在运行的本地或者远程 JVM，对运行在 Java 应用程序的资源消耗和性能进行监控，并通过可视化界面的方式展现！
      · 如下图：检测上述程序的死锁！
@@ -463,7 +444,7 @@ current thread 14
    ```java
    /*
     · idea 命令行 》jstack 进程ID
-   
+
     · jstack 是虚拟机自带的一种堆栈跟踪工具，用于打印给定的 java进程ID 或者 core file 或者 远程调试服务的 java堆栈信息！
     
     · jstack 工具可以用于生成 java虚拟机当前时刻的线程快照。
@@ -473,7 +454,7 @@ current thread 14
    */
    ```
 
-   <img src="image/死锁_3.png" style="zoom: 67%;" />
+   <img src="、image/死锁_3.png" style="zoom: 67%;" />
 
 ###### 解决死锁
 
@@ -588,7 +569,7 @@ current thread 14
 
   通过页表，使得连续的逻辑地址 可以分配在 不连续的内存块中！
 
-  页中某一段程序的 **物理地址 = 页面号*页框大小 + 页内地址**
+  页中某一段程序的 **物理地址 = 页框号*页框大小 + 页内地址**
 
 + *地址变换* ：动态重定位技术
 
@@ -614,14 +595,14 @@ current thread 14
 
 + *快表* ：**只需一次访问内存**
 
-  上述 CPU 访问操作数，需要两次操作内存，耗时较长，而 快表 正是用于缩短操作数的访问时长！
+  上述 CPU 访问操作数，需要两次操作内存，耗时较长，而 快表 正是用于缩短操作数从访问时长！
 
   快表 是 具有 **并行查找能力的** **高速寄存器组**，也称为 *相联存储器* ！它能实现**按照内容查找**，存放着当前访问最为频繁的 少量 活动页表项！
 
   ```
   快表 类似于 具有并行查找能力的高速寄存器缓存，存储的是 频繁访问的 页表！
   地址转换时，直接在快表中查找 页面号，得到对应的 页框号！
-  
+
   快表的管理 与 缓存的管理 一样：存在则使用，不存在则刷新快表，多余则淘汰！
   ```
 
@@ -736,8 +717,8 @@ current thread 14
 
   ```
   目的：
-  能够在内存中建立更多的进程，增加系统的并发量，使得 提高内存利用率！
-  
+  能够在内存中建立更多的进程，增加系统的并发量，使得在 提高内存利用率！
+
   应用：
   目前大多数操作系统都使用了虚拟内存的技术：windows家族的“虚拟内存”，Linux的“交换空间”等！
   ```
@@ -823,7 +804,7 @@ current thread 14
 
   1. 保护 CPU 环境
   2. 分析中断原因
-  3. 转入（缺页）中断处理程序 进行处理
+  3. 转入 （缺页）中断处理程序 进行处理
   4. 恢复 CPU 环境，进程继续执行！
 
 + 缺页中断 与 普通的中断有着明显区别：
@@ -851,7 +832,7 @@ current thread 14
 
    ```
     · FIFO置换：将最先进入内存的页面，置换出去！
-   
+
     · 缺点：
    	1. 置换策略 与 进程实际的运行规律 不适应，可能会将经常被访问的页面置换出去，从而缺页率升高，性能下降！
    	2. 可能会出现 Belady 现象：进程分配的页框越多。缺页率反而越高！
@@ -1020,7 +1001,7 @@ current thread 14
     ```shell
     chmod -R u=rwx,g=rw,o=r /root # 对 root 目录进行权限设定
     -R # 递归设定权限
-    
+
     chmod -R g-w /root # 修改属组对 root 的权限，去掉写权限！
     ```
 
@@ -1046,7 +1027,7 @@ current thread 14
   ```shell
   ps -ef # 查看所有正在运行的进程（包括端口）
   ps -aux # 查看内存中正在运行的程序信息（包括端口、命令行）
-  
+
   # 两者都能查看所有进程信息！
   ```
 
@@ -1056,8 +1037,9 @@ current thread 14
   ps -ef | grep redis # 查看 redis 进程
   # 也可以使用：
   pgrep redis -a
-  
-  
+  ```
+
+
   ps -ef | grep 6379 # 查看端口为 6379 的进程信息
   # 也可以使用：需要 install 该命令
   lsof -i :6379
@@ -1069,13 +1051,13 @@ current thread 14
   grep 内容 文件 # 特定内容：
   top # 查看 CPU 负载，如下：
   $ top -H -p pid
-  
+
   ls -h 、du -sh # 文件大小：
   df -hl # 磁盘空间大小
   sort # 排序命令 
   	 # 命令可以用于文件内容排序并输出；也可以配合通道，将某些查询命令的执行结果排序后输出
   head # 显示文件前几行/查询结果的前几行（通道）
-  
+
   # netstat 命令行工具
   netstat -tunlp # 列出正在监听的所有 TCP 或者 UDP 端口，包括使用端口 和 套接字状态的服务
    	# 此命令中使用的选项具有以下含义：
@@ -1087,7 +1069,7 @@ current thread 14
   	
   # ss 工具 是 netstat 的新版本
   ss -tunlp
-  
+
   lsof -i :端口 # 检查某个端口
   ```
 
@@ -1134,5 +1116,4 @@ current thread 14
 + 进程组成、线程组成、程序内存布局
 
 + 中断、硬中断、软中断
-
 + IO 多路复用：epoll、select、poll
