--- a/计网/计网_1_基础.md
+++ b/计网/计网_1_基础.md
@@ -128,7 +128,7 @@
 
   ```
    · 首先，DNS 是分布式的，分布式体现在，每一层的域名，都有自己的域名服务器，并且下层的 域名服务器 都需要注册到所属的上层 域名服务器中！
-  
+
    · 浏览器输入 url 之后，首先需要通过 DNS 域名服务器 根据域名 查询对应的 ip，再将请求发送给 指定的 ip 主机上！
   ```
 
@@ -142,7 +142,7 @@
      LDNS 为 本地互联网接入 DNS 解析服务，具有缓存域名解析结果的功能！
      ```
 
-  4. 根域名服务器(Root Server) 为 本地域名服务器(LDNS) 解析请求中的 **主域名服务器(gTLD)**，并将主域名服务器的 ip地址 返回给 根域名服务器！
+  4. 根域名服务器(Root Server) 为 本地域名服务器(LDNS) 解析请求中的 **主域名服务器(gTLD)**，并将主域名服务器的 ip地址 返回给 本地域名解析服务器！
 
   5. 本地域名服务器 **向 主域名服务器发起解析请求**！
 
@@ -223,9 +223,9 @@
 
 ###### TCP
 
-+ TCP（Transmission Control Protocol）是一种**面向连接**的通信服务！
++ TCP（Transmission Control Protocol）是一种**面向连接**的通信服务！（报文段）
 
-+ **基于 字节流 传输数据**：它将应用层传递的报文看成字节流，把字节流组织成大小不等的数据块，传递到下一层！
++ **基于 字节流 传输数据**：它将应用层传递的报文看成字节流，把字节流组织成大小不等的报文段，传递到下一层！
 
 + 优点
 
@@ -290,6 +290,7 @@
  3、TCP 基于 字节流 传输；UDP 基于数据报传输！
  4、TCP 是 点对点，支持全双工通信；UDP 支持 1 对 1，1 对 多，多 对 1，多 对 多 通信！
  5、TCP 占用系统资源多，传输效率低；UDP 占用系统资源低，传输效率高！
+ 
  6、TCP 上层应用 一般传输 安全可靠数据，上层引用协议一般是：FTP、SMTP、HTTP
  	UDP 上层应用 一般是即时数据，并且数据量较小，上层协议一般是：DNS、SNMP
 */
@@ -408,7 +409,7 @@
   ```java
   /*
    · MSL（Maximum Segment Lifetime）最长报文段寿命：报文段在网络上存活的最长时间，超过这个时间的报文段将会被丢失！
-  
+
    · TTL（Time to live）
    	TTL 是 IP 首部字段，表示生存时间，这个生存时间是由源主机设置的初始置，但不是存在的具体时间，而是表示 一个IP数据报 可以经过的最大路由数目，每经过一个 路由，TTL 值-1，当 TTL为0 时，IP 数据报被丢失，同时会发送 ICMP 报文通知源主机！
   */
@@ -432,7 +433,7 @@
 
 + *如果已经建立了连接，但是客户端突然出现故障了怎么办？*
 
-  TCP 有一个**保活计时器**，通常设置为 2 小时，如果两个小时内，没有手收到客户端的任何数据，服务器就会 每隔75s 发送一个探测报文段，连续探测 10 次之后，服务器就认为 客户端出现了故障，并关闭连接！
+  TCP 有一个**保活计时器**，通常设置为 **2 小时**，如果两个小时内，没有手收到客户端的任何数据，服务器就会 **每隔75s 发送一个探测报文段**，**连续探测 10 次**之后，服务器就认为 客户端出现了故障，并**关闭连接**！
 
   服务器每收到一次客户端的请求，就会重新复位这个 计时器！
 
@@ -444,7 +445,7 @@
 
   ```
    · 防止 上一次连接中 客户端发送的数据段在网络中滞留，当连接意外中断后，滞留的数据段在下一次连接中 被服务端接收的情况！
-  
+
    · 假设：前后两次 TCP 连接中，初始序列号相同，都为 1
    	经过三次握手之后，序列号变为 3，如果客户端传送的 1个长度为 10 的数据段 在网络中滞留。由于网络原因 客户端、服务端意外断开，那么网络恢复后，双方重新建立连接，滞留在网络中的 数据段 也成功到达了服务端，由于数据段的序列号为 3，与服务端预期相同，因此被接收，而后续客户端发送的数据将无法正常被接收！
   ```
@@ -538,7 +539,7 @@
 
     ```
     如果在对方还未知的情况，私自断开连接，则该服务器处于 半开连接 状态，此后收到对方的数据之后，会响应一个 RST 报文段！
-    
+
     对于 成功建立连接的两个服务器，客户端 向服务端发送 FIN报文 申请关闭连接， 服务端发送 ACK确认报文段 之后，如果网断了，那么 客户端 可能会放弃这个连接，而当 网 恢复之后，如果 服务端继续向 客户端 发送数据，此时，客户端并不认识这个连接，于是就会发送 RST 报文段！
     ```
 
@@ -591,7 +592,7 @@
   2. *伪造的 SYN报文段 ？*  *这个不是 第三次握手解决的问题嘛？和 RST 有关？ 百思不得其解*
 
      ```
-      · 如果伪造 SYN报文段，那么服务端认为 客户端疯了（与 OS 实现有关），正常连接时又来了新连接，此时 服务端会向 客户端 主动发送 RST 包，并在服务端强制关闭连接！
+      · 如果伪造 SYN 报文段，那么服务端认为 客户端疯了（与 OS 实现有关），正常连接时又来了新连接，此时 服务端会向 客户端 主动发送 RST 包，并在服务端强制关闭连接！
      ```
 
 + 伪造报文段 的*关键：* **源端口 & 序列号**
@@ -720,6 +721,8 @@
 
 + *窗口值 越大：网络吞吐量越高！*
 
++ **三次握手的过程中，两端都会设置自己所能够处理的 窗口值 大小。**
+
 ###### 拥塞控制
 
 >  窗口问题2：如果在通信开始，就发送大量的数据，极有可能会导致整个网络拥堵，甚至瘫痪！
@@ -773,7 +776,7 @@
    
    · 传输层通过 源端口 与 目标端口，在计算机节点的应用之间进行通信！
   	在传输层开来，通信就像是 两个终端节点上的应用之间 有一条通信信道！
-  
+
    · 由上述可见，网络层 是为 传输层 服务的，只有经过 IP 寻址才能找到需要通信的终端节点，进而才能在节点的 应用之间进行通信！
    
    · 网络层向 传输层 提供 简单灵活的、无连接的、尽最大努力交付的数据传输服务！如果需要实现数据的可靠性传输，则需要 传输层 处理！传输层提供了一些列的数据可靠性机制！
@@ -819,7 +822,7 @@
 
 + **首部检验和**：*只校验数据报的首部*，不校验数据部分！用于确保 IP 数据报不被破坏！
 
-  数据报 每经过一个 路由器 都会重新计算校验和，因此，不校验数据不部分，可以减少计算量！
+  数据报 每经过一个 路由器 都会重新计算校验和，因此，不校验数据部分，可以减少计算量！
 
 + **源地址、目标地址** ：通信双方的 IP 地址（4 个字节）
 
@@ -854,9 +857,9 @@
   	【？？？？？？？？？？？？】
    · 网络号：在数据链路层的每个段配置不同的值，网络号必须要保证相互连接的每个段的地址不相互重复！在相同段内相连的主机必须有相同的网络地址
    · 主机号：不允许在同一个网段内重复出现！
-  
+
    ·网络标识 与 主机标识 使IP 地址具有唯一性！
-  
+
    · 利用 目标IP地址 进行路由，即使不看主机标识，通过网络标识就能判断出是否为该网段内的主机！
    	与操作：本段网络号 & 目标主机网络号
   */
@@ -950,7 +953,7 @@
      · 网络标识（包括扩展后的网络标识部分）全为 1，主机标识部分 全为 0
      	子网掩码必须是 首位开始连续的 1，后面为 连续的 0
     */
-    
+
     /*
      · 示例：假定 B类 IP 地址（172.20.100.53）定义了 10 为子网掩码，则表示前前 26 位表示网络标识（原为前 16 位）
      
@@ -977,7 +980,7 @@
   ```java
   /*
    ·示例：假定 IP 地址：172.20.100.53 前 26 位表示网络标识
-  
+
    · 表示方式：
    	IP 地址：		172.	 20.	100.	52 /26
    	网络地址：    172.	  20.   100.   0  /26 
@@ -1041,7 +1044,7 @@
       一跳：
       	一跳（1 Hop）是指利用数据链路层以下分层的功能传输数据帧的一个区间！
       	以太网等数据链路中使用 MAC 地址传输数据帧，此时一跳是指从 源MAC 地址到目标 MAC 地址之间传输帧的区间！
-      
+
       多跳路由：
       	是指，路由器或者主机 在转发IP数据报时，只指定下一个路由器合作和主机，而不是将到最终目标地址为止的所有通路全都指定出来！因为每一个区间再转发IP数据报时会分别指定下一个跳的操作，直至包达到最终的目标地址！
       ```
@@ -1053,7 +1056,7 @@
   ```
   IP 是网络层的 寻址，用于在 链路网中查询 目标主机！
   MAC 是数据链路层网络节点之间的寻址！同一个网段内，可以使用 MAC 寻址，不网段，则需要通过 路由转发！
-  
+
   抽象出来网络层，就是要为上层屏蔽底层网络的通信细节，由于底层网络通信复杂，如果给出硬件地址MAC地址，那么不仅用户体验不好，还会增加许多麻烦！
   ```
 
@@ -1119,9 +1122,9 @@
   ```xml
   <!--
   	Traceroute 利用 TTL 为零时，接收到数据报的 网络节点，就会向源主机发送 ICMP超时信息 的特性，发送探测报文跟踪通信过程的 链路信息！
-  
+
   	Traceroute 发送的 IP数据报 封装的是，无法交付的 UDP 用户数据报！当目标主机时，由于主机无法接收，则会返回一个 ICMP 终点不可达的消息！Traceroute 正是以此作为标志，判断数据报是否达到目的主机！
-  
+
   	1、Traceroute 以增量式TTL 的方式不断的向目的主机发送探测报文！
   	2、起始 TTL 设置为1，可通过 数据报所到的第一个路由器 发送的 ICMP TTL报文判断该路由器的 IP地址！
   	3、而后，每获得一个 每发送一个探测报文就将 该报文的 TTL+1，直到 探测报文到达 目标主机！
@@ -1148,7 +1151,7 @@
   	原理：PING 命令 通过向 目标主机 发送 ICMP Echo 回送请求，目标主机 接收到 Echo 请求报文之后，会发送 Echo 回送应答。PING 会根据回送应答的时间 和 响应的次数评估出数据报往返的时间 以及 丢包率！
   -->
   ```
-  
+
   命令：ping 目标主机IP
 
 
@@ -1194,9 +1197,9 @@
 
      ```
      是指 由多个设备共享一个通信介质的一种网络！
-     
+
      在这种方式下，设备之间使用同一个载波信道进行发送和接收，所以，基本上采用半双工通信！
-     
+
      早期的以太网、FDDI 就是共享介质型网络！
      ```
 
@@ -1204,11 +1207,11 @@
 
      ```
      是指 不共享通信介质，是对 介质采取专用的一种传输控制方式！
-     
+
      在这种方式下，网络中的每个计算机 直连 交换机，由交换机 负责转发数据帧。发送端与接收端并不共享通信介质，因此很多情况下采用 全双工通信 方式！
-     
+
      ATM 就是采用 这种传输控制方式！
-     
+
      非共享介质方式 可以根据 交换机的高级特性 构建虚拟局域网（VLAN）、进行流量控制等！		
      ```
 
@@ -1260,7 +1263,7 @@
 + 以太网交换机：*持有多个端口的* **网桥**！
 
   ```
-   ·以太网 利用了 非共享介质型 网路中的 交换机技术 将集线器或集中器等设备以星型连接，形成了 交换集线器，也称为 以太网交换机！
+   · 以太网 利用了 非共享介质型 网路中的 交换机技术 将集线器或集中器等设备以星型连接，形成了 交换集线器，也称为 以太网交换机！
    
    · 以太网交换机构建网络，使得计算机与交换机端口之间形成一对一的连接，因此，发送端与接受端之间并不共享通信介质，可以实现全双工！
   ```
@@ -1281,11 +1284,10 @@
    · 交换机 接收到 主机A 的数据帧时，会将 主机A 的 MAC 地址，与接收数据的端口，建立映射关系，存入转发表中！ 同时 交换机会检查 转发表中 是否存在 目标MAC 地址 与 接口的映射，如果有，则从该接口发送！
    · 如果没有，则交换机从各个接口广播数据帧！此时，只有目标主机才会接收这个 数据帧，其他会将器抛弃！
    · 目标主机 向主机 A 回应时，经过交换机，交换机会将 数据帧转发给主机A，同时将 主机B 与对应接口关联，存入 转发表中！
-  
-  
-  	正是由于 交换机的自学能力，使得交换机是一种即插即用的设备，而不需要网络管理员手动设置交换表的内容！
+     正是由于 交换机的自学能力，使得交换机是一种即插即用的设备，而不需要网络管理员手动设置交换表的内容！
   -->
   ```
+
 
 #### 物理层
 
@@ -1296,14 +1298,11 @@
 
 ##### 集线器 / 中继器
 
-```
+  ```
 集线器 是 在物理层面上延长网络的设备，相当于一个 再生信号放大器！
-
 集线器是一种物理层设备，作于与 比特流，而不是数据帧！
-
 它将 电缆  中传递的 电信号/光信号 经过波形调整放大后再传递给另一个电缆！从而扩大网络储传输的距离！
-```
-
+  ```
 + 一般情况下，集线器 两端的 通信媒介相同，并且不能再传输速度不同的媒介之间转发！
 
 + 如果集线器同时收到两个不同接口的帧，那么就会发生碰撞！
@@ -1338,9 +1337,9 @@
 
   路由器接收了 IP 数据报之后，解析数据报，查看目标地址：
 
-  ​	如果与自己是同网段，那就查看ARP表，如果`ARP表不存在就广播` ！
+  	如果与自己是同网段，那就查看ARP表，如果`ARP表不存在就广播` ！
 
-  ​	如果 不是 同一个网段，路由器会查询 路由表，找到对应网段的下一跳路由器IP地址，并将数据转发！如果，路由表中有多项网段匹配，则采用最长前缀的那个！如果找不到，那就丢弃！
+  	如果 不是 同一个网段，路由器会查询 路由表，找到对应网段的下一跳路由器IP地址，并将数据转发！如果，**路由表中有多项网段匹配，则采用最长前缀的那个**！如果**找不到，那就丢弃**！
 
 ##### 转发表
 
