--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -1,4 +1,4 @@
-##### 单例模式（5中实现方法）（x2）
+##### 单例模式（5中实现方法）
 
 ##### 迭代器 模式
 
@@ -21,21 +21,21 @@
       Iterator<T> iterator();
       // ... ...
   }
-  
+
   // Collection 容器基础接口：继承了 Iterable 接口
   public interface Collection<E> extends Iterable<E> {
       // ... ...
   }
-  
+
   // Iterator 接口：遍历容器的规范接口
   public interface Iterator<E> {
       boolean hasNext();
       E next();
-  
+
       default void remove() {
           throw new UnsupportedOperationException("remove");
       }
-  
+
       default void forEachRemaining(Consumer<? super E> action) {
           Objects.requireNonNull(action);
           while (hasNext())
@@ -187,4 +187,3 @@ public class Adapter extends Adaptee implements Target {
  	如果，适配者是一个接口，那么可以在 类适配器中实现该接口，并使用接口方法 适配 目标类！
 */
 ```
-
