--- a/网络编程/3. 常见 IO 模型_初识.md
+++ b/网络编程/3. 常见 IO 模型_初识.md
@@ -24,7 +24,7 @@
 
     - IO 模型的第二个阶段：
 
-      用户线程阻塞，直到完成 用户缓冲区 于 内核缓冲区之间的数据拷贝
+      用户线程阻塞，直到完成 用户缓冲区 与 内核缓冲区之间的数据拷贝
 
       - read：内核缓冲区 -> 用户缓冲区
       - write：用户缓冲区 -> 内核缓冲区
@@ -112,7 +112,7 @@
 
   *四种 IO 基础模型之一，非阻塞式 IO！！！*
 
-- socket连接默认是阻塞模式，在Linux系统下，可以通过设置将socket变成为非阻塞的模式（Non-Blocking IO）。
+- socket连接默认是阻塞模式，在Linux系统下，可以通过设置将socket变成为非阻塞的模式（Non-Blocking IO）。可以使用`setsockopt()`方法配置套接字，以便在读写调用被阻塞时直接返回 `EWOULDBLOCK` 错误。
 
   在 NIO 模型中，应用程序一旦开始 IO 系统调用，会出现以下两种情况：
 
@@ -225,7 +225,7 @@
 
     ```
     因此，多路复用 IO，一个线程处理一个 socket 请求
-
+  
     --【第二阶段】实现 内核缓冲区 与 用户缓冲区 之间的数据拷贝！！！
     ```
 
